Fix the "View archive sites" section which started to be too long on a phone

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -678,6 +678,7 @@ a.image.cc {
 .archived-link {
   display: flex;
   margin: 10px 0;
+  flex-wrap: wrap;
   a.external-link {
     width: 100px;
     height: 100px;
